Error handling complete.

--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -8,15 +8,35 @@
 <div>
   <form method="POST">
     <div>
-      <input {% if confirmation %}readonly value="{{form['start']}}"{% endif %} name="start">Start Location</input>
+      <input {% if confirmation %}readonly value="{{form['start_location']}}"{% endif %} name="start_location">Start Location</input>
       <br/>
-      <input {% if confirmation %}readonly value="{{form['end']}}"{% endif %} name="end">End Location</input>
+	  {% if 'start_location' in errors %}
+	  <font color='red' size='3'>*{{ errors['start_location']}} </font>
+	  <br>
+	  {% endif %}
+      <input {% if confirmation %}readonly value="{{form['end_location']}}"{% endif %} name="end_location">End Location</input>
+	  {% if 'end_location' in errors %}
+	  <br>
+	  <font color='red' size='3'>*{{ errors['end_location']}} </font>
+	  {% endif %}
     </div>
     <div>
       <input {% if confirmation %}readonly value="{{form['start_date']}}"{% endif %} type="date" name="start_date">Start Date</input>
       <br/>
+	  {% if 'start_date' in errors %}
+	  <font color='red' size='3'>*{{ errors['start_date']}} </font>
+	  <br>
+	  {% endif %}
       <input {% if confirmation %}readonly value="{{form['end_date']}}"{% endif %} type="date" name="end_date">End Date</input>
-    </div>
+	  {% if 'end_date' in errors %}
+	  <br>
+	  <font color='red' size='3'>*{{ errors['end_date']}} </font>
+	  {% endif %}
+	  {% if 'period' in errors %}
+	  <br>
+	  <font color='red' size='3'>*{{ errors['period']}} </font>
+	  {% endif %}
+	  </div>
     {% if confirmation %}
       <div>
         Total fee: ${{fee}}
